2022-09-15  Karl Berry  <karl@freefriends.org>

	* configure.ac (detex_version): 2.8.91.

2022-09-14  Karl Berry  <karl@freefriends.org>

	* detex-src/detex.l (NO_MALLOC_DECL) [!NO_MALLOC_DECL]: make
	#define conditional to placate gcc. (-D on cmdline)
	(\verb): rewrite to look for both eof (ErrorExit)
	and eol (Warning). Original bug report sent by Preston Moore
	to tlsecurity, 08 Jun 2022 22:21:28.
	* testverb.tex: show some of the cases (not added to make check,
	with apologies).
	* Makefile.am (EXTRA_DIST): add testverb.tex.
	* .gdbinit: new trivial file with gdb helpers.

2022-08-30  Karl Berry  <karl@freefriends.org>

	* detex-src/detex.man: typo fixes from Hilmar Preu\ss{}e,
	https://tug.org/pipermail/tex-live/2022-June/048227.html

2021-03-04  Karl Berry  <karl@freefriends.org>

	* detex-src/detex.man: double backslashes. From Debian via Norbert,
	tldistro 3 Mar 2021 07:59:41.

2020-12-03  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Import opendetex-2.8.9.
	* configure.ac: adapted.

2020-11-05  Karl Berry  <karl@freefriends.org>

	* configure.ac (AC_HEADER_TIME): remove, since it will be
	a no-op in the next autoconf anyway, and is (hopefully) universal.

2020-06-16  Akira Kakuto  <kakuto@w32tex.org>

	* detex.l, detex.c: Support old compilers.

2020-06-15  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Import opendetex-2.8.7.

2020-03-15  Karl Berry  <karl@freefriends.org>

	* opendetex-2.8.6 is identical to what we compiled before.
	Not even the version number was changed, apparently.

2019-02-03  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Import opendetex-2.8.5, TLpatches adapted.

2018-08-16  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Import opendetex-2.8.4, TLpatches adapted.
	* test.lout, test.tout: adjusted (back to original).

2018-06-20  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* Import opendetex-2.8.3, TLpatches adapted.
	* test.lout, test.tout: adjusted.
