@@ -4,17 +4,29 @@
 # Copyright 2009 Peter Breitenlohner <tex-live@tug.org>
 # You may freely use, modify and/or distribute this file.
 
+BinDir=${BinDir:-.}
+ExeExt=${ExeExt:-}
+_detex=$BinDir/detex$ExeExt
+
+# pre-generated test results in the repository are stored in LF
+# but the output might be written in CRLF on some platform.
+# if 'diff --strip-trailing-cr' is available, exploit it.
+# (useful for tests on win32 binaries run on MSYS shell)
+DIFF="diff"
+$DIFF --strip-trailing-cr $0 $0 \
+  && DIFF="diff --strip-trailing-cr" || echo
+
 echo '#' >texmf.cnf
 
-./detex $srcdir/test.tex >test.out \
-	&& diff test.out $srcdir/test.lout \
+$_detex $srcdir/test.tex >test.out \
+	&& $DIFF test.out $srcdir/test.lout \
 	|| exit 1
 
-./detex -l $srcdir/test.tex >test.out \
-	&& diff test.out $srcdir/test.lout \
-	|| exit 1
+$_detex -l $srcdir/test.tex >test.out \
+	&& $DIFF test.out $srcdir/test.lout \
+	|| exit 2
 
-./detex -t $srcdir/test.tex >test.out \
-	&& diff test.out $srcdir/test.tout \
-	|| exit 1
+$_detex -t $srcdir/test.tex >test.out \
+	&& $DIFF test.out $srcdir/test.tout \
+	|| exit 3
 
