@@ -1,3 +1,7 @@
+2023-08-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* detex.test: Make easier to test on Windows.
+
 2022-09-15  Karl Berry  <karl@freefriends.org>
 
 	* configure.ac (detex_version): 2.8.91.
